# interactive-presentation

./: .gitignore  README.md  package.json  plot.py  plots.html  pyproject.toml  run_presentation.py
apps/backend/app/: config.py  content_loader.py  content_writer.py  main.py  state.py
apps/backend/app/routers/: __init__.py  choices.py  composite.py  health.py  join_and_save.py  media.py  phone.py  presentation.py  sound.py  spa.py  timer.py  timer_composite_legacy.py
apps/backend/app/services/: choices_service.py  composite_service.py  media_service.py  presentation_service.py  sound_service.py  timer_service.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: main.ts  styles.css  vite-env.d.ts
apps/web/src/ip/: bootstrap.ts  config.ts
apps/web/src/ip/api/: media.ts  presentation.ts
presentations/default/: animations.csv  defaults.json  geometries.csv  presentation.pr  presentation.txt
presentations/default/groups/fav_subjects/: elements.pr
presentations/default/groups/sound1/: elements.pr
presentations/default/groups/timer1/: elements.pr
presentations/test/: animations.csv  defaults.json  geometries.csv  presentation.pr
presentations/test/groups/t_graph/: elements.pr
presentations/test/groups/t_timer/: elements.pr
tools/cursors/: index.html  resize-double-arrow.html  rotation-half-circle-left.html
tools/vscode/interactive-presentation-pr/: README.md  language-configuration.json  package.json
tools/vscode/interactive-presentation-pr/syntaxes/: ippr.tmLanguage.json
(+5 files in other folders)
